Fix secondary footer navigation separators' spacing. (see #668)

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -521,9 +521,6 @@ a.get-help-btn {
 .footer__navigation-list-item:last-child::after {
     content: none;
 }
-.footer__navigation-list--secondary .footer__navigation-list-item {
-    margin-right: 10px;
-}
 .footer__navigation-list--secondary .footer__navigation-list-item:last-of-type {
     margin-right: 0;
 }
